fix: fix items overflow and navigation bar z-index

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,7 +8,6 @@
     height: 60%;
     width: 100%;
     display: flex;
-
 }
 
 .welcome {
@@ -18,9 +17,10 @@
     justify-content: center;
     align-items: center;
     width: 50%;
-    height: 87%;
+    max-height: 87%;
     background: var(--main-background);
     background: var(--main-gradient);
+    overflow: hidden;
 }
 
 .welcomeHero{
@@ -33,9 +33,6 @@
 }
 
 .hero {
-    /*position: relative;*/
-    /*top: 25%;*/
-    /*left: 5%;*/
     max-width: 200px;
     max-height: 200px;
     transform: translateY(15%);
@@ -88,13 +85,12 @@ h3 {
 }
 
 .welcome_traits {
-    align-self: flex-end;
     display: flex;
     justify-content: space-evenly;
     color: var(--main-color);
     font-size: 2rem;
-    bottom: 5px;
     width: 100%;
+    overflow: hidden;
 }
 
 .passion {
