--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -12,6 +12,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    z-index: 100;
 }
 
 .nav_icon{
